# electron-python

./: .gitignore  README.md  dev-app-update.yml  electron-builder.yml  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js
.github/: copilot_instructions.md
.github/workflows/: build.yml  envs.yml  envs2.yml  release.yml
poet/: pyproject.toml
python/: Pipfile  backend.spec  bear.py  build.py  check.py  image_classifier.py  text_processor.spec
src/main/: camtrap.js  index.js  queries.js
src/preload/: index.js
src/renderer/: index.html
src/renderer/src/: App.jsx  activity.jsx  ai_models.jsx  base.jsx  clock.jsx  deployments.jsx  import.jsx  main.jsx  media.jsx  overview.jsx  study.jsx
src/renderer/src/assets/: base.css  main.css
src/renderer/src/ui/: speciesDistribution.jsx  timeseries.jsx
test-species/: README.md  build.py  main.py  pyproject.toml  run_server.py
test-species/scripts/: predict.sh
