[project]
name = "poet-test"
version = "0.1.0"
description = "hello"
authors = [
    {name = "Jeremy Vuillermet",email = "jeremy.vuillermet@gmail.com"}
]
requires-python = ">=3.9,<=3.11.11"
dependencies = [
    "speciesnet (>=4.0.3,<5.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
