[project]
name = "test-species"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "speciesnet>=4.0.1",
    "numpy<2.0.0", # Pin NumPy to version 1.x
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "tensorflow >= 2.12, < 2.16",
    "tensorflow-io-gcs-filesystem==0.31.0"
]

[dependency-groups]
dev = [
    "pyinstaller>=6.12.0",
]
